tests/baselines/reference/importNonExportedMember.errors.txt
b.ts(1,15): error TS2460: Module '"./a"' declares 'bar' locally, but it is exported as 'baz'.


==== a.ts (0 errors) ====
    declare function foo(): any
    declare function bar(): any;
    export { foo, bar as baz };
    
==== b.ts (1 errors) ====
    import { foo, bar } from "./a";
                  ~~~
!!! error TS2460: Module '"./a"' declares 'bar' locally, but it is exported as 'baz'.
!!! related TS2728 a.ts:2:18: 'bar' is declared here.
    